# biohub-kaggle

./: .env.example  .gitignore  CLAUDE.md  README.md  menu.yaml  pyproject.toml  starter.ipynb
docs/: gpu_tally.txt  index.html  learned_detector_plan.md  results_log.md
eval/: analyze_gt.py  appearance_probe.py  audit_datasets.py  candidate_probe.py  dataset_audit.csv  det_sweep_local.py  dev_subset.json  diagnose_recall.py  error_anatomy.py  failure_modes.py  learned_cv_local.py  local_eval.py  perturbation_test.py  rawlogit_probe.py  sweep_postproc.py  veto_harness.py
eval/grids/: learned_postproc.json
experiments/: baseline.py  challenger.py
flows/: generate_submission.py  promote.py
notebooks/: 00_visual_walkthrough.ipynb  02_submission_baseline.ipynb  build_submission_nb.py  exploration.ipynb
notebooks/baseline-classic/: 01_approach_and_local_baseline.ipynb  02_submission_baseline.ipynb  03_submission_ilp.ipynb  SUBMISSION.md  build_submission_ilp_nb.py  build_submission_nb.py
notebooks/blend-09/: blend09_codeonly.ipynb  blend09_probe_v7.ipynb  blend09_retrain.ipynb  blend09_submit.ipynb  blend09_submit_keepfb_only.ipynb  blend09_submit_retrained.ipynb  blend09_tuning.ipynb  experiments_blend09.md  kaggle_tuning.ipynb
notebooks/gpu-start/: 01_host_baseline_infer.ipynb  (+3 more)
pipeline/: __init__.py  config.py  deepcenter.py  detect.py  io_zarr.py  link.py  link_ilp.py  postprocess.py  predict_instrumented.py  run.py  submission.py  train_frameskip.py
scripts/: build_kaggle_wheels.sh  kaggle_log.py  nb_preflight.py  submission_to_geff.py  view.sh
(+10 files in other folders)
